# OurCRM

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  OurCRM  README.md  main.py  pyproject.toml  scratchpad.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  user_story.yml
.github/workflows/: ci.yml  release.yml
config/: config.toml
docs/: 001-setup-ci-pipeline.md  001-setup-dev-environment.md  002-build-executable-on-tag.md  002-run-the-application.md  003-create-master-password.md  003-run-linters-and-formatters.md  004-generate-recovery-password.md  004-run-test-suite.md  005-build-standalone-executable.md  005-create-encrypted-database.md  006-install-uv-package-manager.md  006-log-in-with-master-password.md  007-autolock-after-inactivity.md  007-create-initial-project-structure.md  008-change-master-password.md  008-create-first-test.md  009-configure-code-quality-tools.md  009-password-recovery-flow.md  010-create-master-password.md  010-navigate-between-sections.md  011-log-in-with-master-password.md  011-open-settings-window.md  012-configure-general-settings.md  012-generate-recovery-password.md  013-configure-security-settings.md  013-confirm-recovery-password-saved.md  014-create-encrypted-database.md  014-home-dashboard.md  015-create-first-window.md  015-dashboard-quick-actions-navigation.md  016-create-new-contact.md  016-manual-contact-entry.md  016-navigate-between-sections.md  017-open-settings-window.md  017-view-call-list.md  017-view-contact-list.md  018-configure-general-settings.md  018-log-call-outcome.md  018-view-contact-details.md  019-configure-security-settings.md  (+717 more)
docs/slices/: Slice1.md  slice10.md  slice11.md  slice12.md  slice13.md  slice14.md  slice15.md  slice16.md  slice17.md  slice18.md  slice19.md  slice2.md  slice20.md  slice21.md  slice3.md  slice4.md  slice5.md  slice6.md  slice7.md  slice8.md  slice9.md
scripts/: _milestones.py  audit_story_sections.py  build.py  fix_bdd_tags.py  fix_milestone_field.py  fix_milestones.py  migrate_stories.py  standardize_docs.py  story_migration_map.json  sync_issue_bodies.py
src/ourcrm/: main.py
src/ourcrm/calendar/: models.py  repository.py
src/ourcrm/core/: app_version.py  config.py  container.py  crash_handler.py  formatting.py
src/ourcrm/database/: encrypted_database.py  manager.py  models.py
src/ourcrm/leads/: conversion_report.py  models.py  repository.py
src/ourcrm/ui/: backoff.py  calendar_page.py  change_master_password_dialog.py  contacts_page.py  crash_dialog.py  dashboard_page.py  general_page.py  help_window.py  inactivity_timer.py  leads_page.py  lock_screen.py  login_screen.py  main_window.py  navigation.py  recovery_password_dialog.py  recovery_set_password_dialog.py  recovery_verify_dialog.py  security_page.py  settings_window.py  startup_dialog.py  theme.py
tests/: _keyring.py  conftest.py  test_structure.py
tests/bdd/: conftest.py  test_app_shell.py  test_authentication.py  test_calendar.py  test_contacts.py  test_dashboard.py  test_infrastructure.py  test_leads.py  test_setup.py  test_shell.py  test_us002_run_application.py  test_us005_build_executable.py  test_us007_project_structure.py  test_us010_create_master_password.py  test_us011_log_in_with_master_password.py  test_us012_generate_recovery_password.py  test_us013_confirm_recovery_password_saved.py  test_us014_create_encrypted_database.py  test_us015_create_first_window.py  test_us016_navigate_between_sections.py  test_us017_open_settings_window.py  test_us127_change_master_password.py  test_us128_password_recovery.py
tests/bdd/features/: app_shell.feature  authentication.feature  calendar.feature  contacts.feature  dashboard.feature  infrastructure.feature  leads.feature  setup.feature  shell.feature  us002_run_application.feature  us005_build_executable.feature  us007_project_structure.feature  us010_create_master_password.feature  us011_log_in_with_master_password.feature  us012_generate_recovery_password.feature  us013_confirm_recovery_password_saved.feature  us014_create_encrypted_database.feature  us015_create_first_window.feature  us016_navigate_between_sections.feature  us017_open_settings_window.feature  us127_change_master_password.feature  us128_password_recovery.feature
tests/manual/: app-shell.md  authentication.md  ci-cd.md  dashboard.md  help.md  infrastructure.md
tests/manual/authentication/: authentication.md  autolock.md  database_encryption.md  login.md  password_change.md  password_creation.md  password_recovery.md  recovery_password_setup.md
tests/manual/calendar/: calendar.md
tests/manual/contacts/: contact_details.md  contact_list.md  create_contact.md  delete_contact.md  edit_contact.md  log_call_outcome.md  manual_contact_entry.md  search_contacts.md  set_callback_timeframe.md  view_call_list.md  (+1 more)
tests/unit/: test_us002_main_window.py  test_us005_build_script.py  test_us007_project_structure.py  test_us010_auth_service_create.py  test_us010_password_hasher.py  test_us010_password_validator.py  test_us011_login.py  test_us012_recovery_generator.py  test_us013_recovery_confirmation.py  test_us014_database_manager.py  test_us014_encrypted_database.py  test_us014_key_derivation.py  test_us015_main_window.py  test_us016_main_window.py  test_us016_navigation.py  test_us017_main_window.py  test_us017_settings_window.py  test_us018_app_config.py  test_us018_general_page.py  test_us018_general_settings.py  test_us018_settings_panel_wiring.py  test_us018_theme.py  test_us019_app_config_security.py  test_us019_security_page.py  test_us019_security_settings.py  test_us019_settings_panel_security_wiring.py  test_us094_inactivity_timer.py  test_us094_lock_screen.py  test_us094_main_window_autolock.py  test_us127_change_password.py  test_us128_recovery.py  test_us129_auth_service_logout.py  test_us129_login_screen.py  test_us129_main_window_logout.py  test_us133_dashboard_page.py  test_us133_navigation.py  test_us134_help_window.py  test_us134_main_window_help.py  test_us170_stats_widget.py  test_us175_quick_actions.py
wiki/: Leads.md  Roadmap.md
(+110 files in other folders)
