[project]
name = "ourcrm"
version = "0.0.0"
description = "A desktop CRM for real estate agents."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "cryptography>=48.0.0",
    "keyring>=25.7.0",
    "pyside6>=6.11.1",
    "sqlalchemy>=2.0.50",
    "tomli-w>=1.2.0",
]

[project.scripts]
ourcrm = "ourcrm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ourcrm"]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "nuitka>=2.5",
    "pre-commit>=4.0",
    "pytest>=9.0",
    "pytest-bdd>=8.1",
    "pytest-cov>=7.1",
    "pytest-qt>=4.5.0",
    "python-semantic-release>=9.0",
    "ruff>=0.9",
]

# ---------------------------------------------------------------------------
# ruff — linter + formatter (replaces black, isort, flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforces type hints)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [

]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]  # don't require annotations in test files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
mypy_path = ["src", "scripts"]
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tomli_w", "pytest", "pytest_bdd", "pytestqt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
# PySide6-stubs (pre-commit) lacks QStyleHints.setColorScheme (added Qt 6.7)
module = ["ourcrm.ui.theme", "tests.unit.shell.test_settings_panel_wiring", "tests._keyring"]
warn_unused_ignores = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
addopts = [
    "--cov=ourcrm",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--strict-markers",
]
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",
    "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:gherkin",
]

[tool.coverage.run]
source = ["src/ourcrm"]
omit = ["tests/*", "src/ourcrm/database/migrations/*"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# python-semantic-release — automated versioning from conventional commits
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_parser = "conventional"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.publish]
upload_to_vcs_release = false

# ---------------------------------------------------------------------------
# ourcrm — project-level configuration
# ---------------------------------------------------------------------------
[tool.ourcrm]
capabilities = [
    "authentication",
    "shell",
    "contacts",
    "leads",
    "calendar",
    "tasks",
    "properties",
    "transactions",
    "email",
    "mls",
    "telephony",
    "ai",
    "notifications",
    "backup",
    "import_export",
    "infrastructure",
]
